--- a/.github/workflows/ci-mainline.yml
+++ b/.github/workflows/ci-mainline.yml
@@ -15,11 +15,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Source
         uses: actions/checkout@v4
-      - run: ls $GITHUB_WORKSPACE
+      - run: ls $GITHUB_WORKSPACE/App
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
       - name: Build with Gradle
-        run: $GITHUB_WORKSPACE/gradlew build
+        run: $GITHUB_WORKSPACE/App/gradlew build
       - name: Release
         uses: fnkr/github-action-ghr@v1.3
         env:
