--- a/.github/workflows/ci-mainline.yml
+++ b/.github/workflows/ci-mainline.yml
@@ -15,11 +15,15 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Source
         uses: actions/checkout@v4
-      - run: ls $GITHUB_WORKSPACE/App
+      - run: ls $GITHUB_WORKSPACE
+      - name: Setup JDK
+        uses: actions/setup-java@v4.2.2
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
+      - name: Download dependencies
+        run: ./gradlew dependencies
       - name: Build with Gradle
-        run: $GITHUB_WORKSPACE/App/gradlew build
+        run: $GITHUB_WORKSPACE/gradlew build
       - name: Release
         uses: fnkr/github-action-ghr@v1.3
         env:
