--- a/.github/workflows/ci-mainline.yml
+++ b/.github/workflows/ci-mainline.yml
@@ -18,7 +18,8 @@ jobs:
       - run: ls $GITHUB_WORKSPACE
       - name: Setup JDK
         uses: actions/setup-java@v4.2.2
-        distribution: jdk
+        with:
+          distribution: jdk
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
       - name: Download dependencies
