--- a/.github/workflows/ci-mainline.yml
+++ b/.github/workflows/ci-mainline.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4.2.2
         with:
-          distribution: jdk
-          java-version: 11
+          distribution: 'jdk'
+          java-version: '11'
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
       - name: Download dependencies
