--- a/.github/workflows/ci-mainline.yml
+++ b/.github/workflows/ci-mainline.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4.2.2
         with:
-          distribution: 'jdk'
+          distribution: 'zulu'
           java-version: '11'
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
