--- a/.github/workflows/ci-mainline.yml
+++ b/.github/workflows/ci-mainline.yml
@@ -19,13 +19,13 @@ jobs:
         uses: actions/setup-java@v4.2.2
         with:
           distribution: 'zulu'
-          java-version: '11'
+          java-version: '21'
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
       - name: Download dependencies
-        run: $GITHUB_WORKSPACE/App/gradlew dependencies
+        run: ./gradlew dependencies
       - name: Build with Gradle
-        run: $GITHUB_WORKSPACE/App/gradlew build
+        run: ./gradlew build
       - name: Release
         uses: fnkr/github-action-ghr@v1.3
         env:
