--- a/.github/workflows/ci-mainline.yml
+++ b/.github/workflows/ci-mainline.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4.2.2
         with:
-          distribution: 'zulu'
-          java-version: '22'
+          distribution: 'temurin'
+          java-version: '21'
       - name: Build with Gradle
         run: $GITHUB_WORKSPACE/App/gradlew build
       - name: Release
