--- a/.github/workflows/ci-mainline.yml
+++ b/.github/workflows/ci-mainline.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Android SDK Tools
         uses: android-actions/setup-android@v3.2.1
       - name: Build with Gradle
-        run: gradle build ./App
+        run: gradle build -p ./App
       - name: Release
         uses: fnkr/github-action-ghr@v1.3
         env:
