--- a/.github/workflows/ci-mainline.yml
+++ b/.github/workflows/ci-mainline.yml
@@ -21,3 +21,5 @@ jobs:
         uses: android-actions/setup-android@v3.2.1
       - name: Build with Gradle
         run: gradle build -p ./App
+        env:
+          TRELLO_API_KEY: ${{secrets.TRELLO_API_KEY}}
