--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/card_list_widget_info" />
         </receiver>
-
+        <service android:name=".CardListService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"
+            android:exported="false" />
         <activity
             android:name=".CardListWidgetConfigureActivity"
             android:exported="false"
